refactor: standardize X-Request-Id and OAuth alias
Propagate X-Request-Id from gateway to services and log it in auth-service for consistent request tracing. Remove internal OAuth endpoints and add /api/v1/auth/oauth/{provider} authorize alias to match docs.